Added background image

--- a/src/index.css
+++ b/src/index.css
@@ -256,7 +256,7 @@ p {
 */
 .top-banner{
   width:100%;
-  background: url('./assets/bg-1.jpg') no-repeat center;
+  background: url('https://watermark.lovepik.com/photo/40015/5932.jpg_wh1200.jpg') no-repeat center;
   background-size:cover;
   padding:16.875rem 0 9.375rem;
 }
